<resources>
    <string name="app_name">BenchMe</string>
    <string name="act_main_TV_logo">BenchMe</string>
    <string name="act_main_TV_message">BenchMe is a new way of testing your device capabilities</string>
    <string name="act_main_BTN_start">Benchmark</string>
    <string name="act_results_TV_header">Results</string>
    <string name="act_results_TV_device">Your device</string>
    <string name="act_results_BTN_all_tests">See all tests</string>
    <string name="act_fullResults_TV_header">Tests result</string>
    <string name="act_fullResults_TV_CPU_header"><![CDATA[CPU Tests & Scores]]></string>
    <string name="act_fullResults_TV_HDD_header"><![CDATA[HDD Tests & Scores]]></string>
    <string name="act_fullResults_TV_RAM_header"><![CDATA[RAM Tests & Scores]]></string>
    <string name="act_fullResults_BTN_device_info">See full device info</string>
    <string name="act_main_dialog_message">Making your phone go over 9000</string>
    <string name="act_result_dialog_message">Saving information</string>
    <string name="act_ranking_tv_header">Ranking</string>
    <string name="adapter_listDevices_BTN_view">See full details</string>
    <string name="act_main_BTN_ranking">Ranking</string>
    <string name="act_ranking_dialog_message">Getting devices</string>
    <string name="popup_device_TV_CPU_header">CPU Tests</string>
    <string name="popup_device_TV_HDD_header">HDD Tests</string>
    <string name="popup_device_TV_RAM_header">RAM Tests</string>
    <string name="act_main_TV_title">Start testing</string>
    <string name="act_results_TV_score">BenchMe Score</string>
</resources>
