<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:keepScreenOn="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        tools:context=".activity.MainActivity"
        >


        <TextView
            android:id="@+id/act_main_TV_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/act_main_TV_title"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/act_main_TV_message"
            />

        <TextView
            android:id="@+id/act_main_TV_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/act_main_TV_message"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/act_main_BTN_benchmark"
            android:layout_marginBottom="16dp"
            />

        <android.widget.Button
            android:id="@+id/act_main_BTN_benchmark"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/act_main_BTN_start"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/act_main_BTN_ranking" />

        <android.widget.Button
            android:id="@+id/act_main_BTN_ranking"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/act_main_BTN_ranking"
            android:textAllCaps="false"
            android:textColor="@color/colorButton"
            android:textSize="24sp"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>