<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/act_results_TV_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/act_results_TV_header"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/act_results_CV_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:elevation="2dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_results_TV_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/act_results_TV_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/act_results_TV_device"
                    android:textSize="24sp"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/act_results_TV_device_model_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_model_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_OS_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_model_header"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_OS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_OS_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_model_header"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_CPU_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_OS"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_CPU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_CPU_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_OS"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_CPU_cores_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_CPU_cores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_CPU_cores_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_CPU_speed_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU_cores_header"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_CPU_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_CPU_speed_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU_cores_header"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_RAM_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU_speed_header"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_RAM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_RAM_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_CPU_speed_header"
                    />

                <TextView
                    android:id="@+id/act_results_TV_device_storage_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/violet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_RAM_header"
                    />
                <TextView
                    android:id="@+id/act_results_TV_device_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/act_results_TV_device_storage_header"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_device_RAM_header"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/act_results_CV_device_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:elevation="2dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_results_CV_device">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/act_results_TV_score_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_chart"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/act_results_TV_score"
                    android:textSize="24sp"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/act_results_TV_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="2345"
                    android:textColor="@color/violet"
                    android:textSize="72sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/act_results_TV_score_header" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/act_results_BTN_all_tests"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#7965B9"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/act_results_BTN_all_tests"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_results_CV_device_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>